[gd_scene load_steps=4 format=3 uid="uid://bgdg5y0ec727w"]

[ext_resource type="Script" uid="uid://3en5ckilnf7d" path="res://scripts/gui/settings_menu.gd" id="1_7gm8v"]
[ext_resource type="FontFile" uid="uid://dvbi1cshtkqcb" path="res://assets/fonts/ChailceNogginRegular.ttf" id="2_74jfj"]
[ext_resource type="PackedScene" uid="uid://bd7dpdh8afywi" path="res://scenes/gui/common/menu_nav_button.tscn" id="3_o3mwo"]

[node name="SettingsMenu" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -291.0
offset_top = -287.0
offset_right = 291.0
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7gm8v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_74jfj")
theme_override_font_sizes/font_size = 50
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VolumeSectionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_74jfj")
theme_override_font_sizes/font_size = 26
text = "VOLUME"
vertical_alignment = 1

[node name="MasterVolumeSetting" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MasterVolumeSetting"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.5
offset_right = 124.0
offset_bottom = 13.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_74jfj")
theme_override_font_sizes/font_size = 20
text = "MASTER"
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MasterVolumeSetting"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2

[node name="MusicVolumeSetting" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MusicVolumeSetting"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.5
offset_right = 124.0
offset_bottom = 13.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_74jfj")
theme_override_font_sizes/font_size = 20
text = "MUSIC"
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicVolumeSetting"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2

[node name="SFXVolumeSetting" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SFXVolumeSetting"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.5
offset_right = 124.0
offset_bottom = 13.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_74jfj")
theme_override_font_sizes/font_size = 20
text = "SFX
"
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SFXVolumeSetting"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DisplaySectionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_74jfj")
theme_override_font_sizes/font_size = 26
text = "DISPLAY
"
vertical_alignment = 1

[node name="FullscreenSetting" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FullscreenSetting"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.5
offset_right = 124.0
offset_bottom = 13.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_74jfj")
theme_override_font_sizes/font_size = 20
text = "FULLSCREEN
"
vertical_alignment = 1

[node name="FullscreenCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/FullscreenSetting"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -13.0
offset_right = -317.0
offset_bottom = 11.0
grow_horizontal = 0
grow_vertical = 2

[node name="ResolutionSetting" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ResolutionSetting"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.5
offset_right = 124.0
offset_bottom = 13.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_74jfj")
theme_override_font_sizes/font_size = 20
text = "RESOLUTION
"
vertical_alignment = 1

[node name="ResolutionDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer/ResolutionSetting"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -15.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_74jfj")
item_count = 1
popup/item_0/text = "1920x1080"
popup/item_0/id = 0

[node name="OkButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_o3mwo")]
unique_name_in_owner = true
layout_mode = 2
text = "OK"
